Make Stage to have the identity Matrix as transform always independently to retina or window scaling (#638)