@@ -2,6 +2,7 @@ import com.soywiz.korlibs.modules.*
 import com.soywiz.korlibs.util.*
 import org.gradle.kotlin.dsl.kotlin
 import java.io.File
+import com.soywiz.korlibs.modules.*
 
 buildscript {
     val kotlinVersion: String = libs.versions.kotlin.get()
@@ -101,19 +102,6 @@ allprojects {
         else -> "com.soywiz.korlibs.$firstComponent"
     }
 }
-
-val beforeJava9 = System.getProperty("java.version").startsWith("1.")
-
-val javaAddOpens = ArrayList<String>().apply {
-    add("--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED")
-    add("--add-opens=java.desktop/java.awt=ALL-UNNAMED")
-    add("--add-opens=java.desktop/sun.awt=ALL-UNNAMED")
-    if (isMacos) {
-        add("--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-        add("--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED")
-    }
-    if (isLinux) add("--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED")
-}.toTypedArray()
 
 rootProject.plugins.withType<org.jetbrains.kotlin.gradle.targets.js.nodejs.NodeJsRootPlugin> {
     rootProject.the<org.jetbrains.kotlin.gradle.targets.js.nodejs.NodeJsRootExtension>().nodeVersion = nodeVersion
@@ -436,24 +424,6 @@ subprojects {
     }
 }
 
-open class KorgeJavaExec : JavaExec() {
-    private val jvmCompilation by lazy { project.kotlin.targets.getByName("jvm").compilations as NamedDomainObjectSet<*> }
-    private val mainJvmCompilation by lazy { jvmCompilation.getByName("main") as org.jetbrains.kotlin.gradle.plugin.mpp.KotlinJvmCompilation }
-
-    @get:InputFiles
-    val korgeClassPath by lazy {
-        mainJvmCompilation.runtimeDependencyFiles + mainJvmCompilation.compileDependencyFiles + mainJvmCompilation.output.allOutputs + mainJvmCompilation.output.classesDirs
-    }
-
-    init {
-        systemProperties = (System.getProperties().toMutableMap() as MutableMap<String, Any>) - "java.awt.headless"
-        project.afterEvaluate {
-            //if (firstThread == true && OS.isMac) task.jvmArgs("-XstartOnFirstThread")
-            classpath = korgeClassPath
-        }
-    }
-}
-
 fun Project.samples(block: Project.() -> Unit) {
     subprojects {
         if (project.isSample && project.hasBuildGradle()) {
@@ -610,9 +580,6 @@ samples {
         val runJvm by creating(KorgeJavaExec::class) {
             group = "run"
             mainClass.set("MainKt")
-            if (!beforeJava9) {
-                javaAddOpens.forEach { jvmArgs(it) }
-            }
         }
 
         // esbuild
